# libscheme

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RUST_PORT_FEASIBILITY.md
.github/workflows/: ci.yml
crates/libscheme/: Cargo.toml
crates/libscheme/benches/: eval_bench.rs
crates/libscheme/src/: boolean.rs  char.rs  env.rs  error.rs  eval.rs  fun.rs  interner.rs  interp.rs  lib.rs  list.rs  number.rs  port.rs  printer.rs  promise.rs  reader.rs  repl.rs  string.rs  structs.rs  symbol.rs  syntax.rs  value.rs  vector.rs
crates/libscheme/tests/: eval.rs  io_structs.rs  primitives.rs  r4rs_suite.rs  reader_printer.rs  syntax.rs
crates/posix/: Cargo.toml
crates/posix/src/: lib.rs
crates/posix/tests/: extension.rs
crates/scheme/: Cargo.toml
crates/scheme/src/: main.rs
src/: Makefile  README.md  main.c  scheme.h  scheme_alloc.c  scheme_bool.c  scheme_char.c  scheme_env.c  scheme_error.c  scheme_eval.c  scheme_fun.c  scheme_hash.c  scheme_list.c  scheme_number.c  scheme_nummacs.h  scheme_port.c  scheme_print.c  scheme_promise.c  scheme_read.c  scheme_string.c  scheme_struct.c  scheme_symbol.c  scheme_syntax.c  scheme_type.c  scheme_vector.c
src/doc/: libscheme.md
src/posix/: README.md
